--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    </head>
    <body>
       <nav class="navbar navbar-expand-lg bg-light navbar-light">
-         <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png?20220706172052/30/30" width = 130 height = 100 class="mr-2"></span></button>
+         <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png?20220706172052/30/30" width = 40 height = 30 class="mr-2"></span></button>
          <div class="collapse navbar-collapse" id="navbar-body">
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav ml-auto">
@@ -28,40 +28,51 @@
             <source srcset="https://cdn.mos.cms.futurecdn.net/8gzcr6RpGStvZFA2qRt4v6-1200-80.jpg" type="image/svg+xml">
             <img src="https://cdn.mos.cms.futurecdn.net/8gzcr6RpGStvZFA2qRt4v6-1200-80.jpg" class="mx-auto d-block" alt="Responsive image">
          </picture>
-         <div class='py-3 my-4'></div>
+         <div class='py-1 my-1'></div>
          <h1>About Our Project</h1>
-         <p>Insert after</p>
+         <p>The purpose of our website is to offer valuable insights and trends within the dynamic landscape of YouTube, catering to both existing content Youtubers and aspiring Youtubers. Our project aims to provide a comprehensive resource showcasing data-driven visualizations that delve into successful strategies, demographics, and backgrounds of the top 1,000 global Youtubers. Given the variety of background information we have on these top 1,000 global Youtubers and information on their content and activity, our visualizations aim to answer our initial questions: What are the most popular channel categories on Youtube? Where is the highest concentration of successful Youtubers when looking at a global map? What level of global and regional impact do influential Youtube creators have on the world and the region that they reside in? Are there geographical trends in terms of channel categories, video viewers, subscribers, and amount of Youtubers in specific geographical regions?</p>
          <div class='py-3 my-4'></div>
          <h1>Meet the Team!</h1>
          <!doctype html>
+         <!DOCTYPE html>
 <html lang="en" dir="ltr">
-   <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-      <link rel="stylesheet" href="css/main.css">
-      <title>Page Title</title>
-   </head>
-   <body>
-      <div class="container" id="bsr-wrapper">
-         <div class="row">
-            <div class="col-md-9">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis rerum quae, ut iusto placeat! Ab porro ipsa ad nam repudiandae, dicta ducimus placeat, ipsam in, doloribus obcaecati omnis esse aspernatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum placeat at, deleniti minus necessitatibus, dolore adipisci ipsum provident distinctio in. Excepturi omnis, nisi. Possimus consequuntur unde labore rem in natus.</p>
-            </div>
-            <div class="col"><img src="https://unsplash.it/300/300" class="img-fluid mr-auto d-block border-0 rounded-0 "></div>
-         </div>
-         <div class="row">
-            <div class="col"><img src="https://unsplash.it/300/300" class="img-fluid mr-auto d-block border-0 rounded-0"></div>
-            <div class="col-md-9">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis rerum quae, ut iusto placeat! Ab porro ipsa ad nam repudiandae, dicta ducimus placeat, ipsam in, doloribus obcaecati omnis esse aspernatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum placeat at, deleniti minus necessitatibus, dolore adipisci ipsum provident distinctio in. Excepturi omnis, nisi. Possimus consequuntur unde labore rem in natus.</p>
-            </div>
-         </div>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+    <style>
+      .col img {
+        max-width: 70%;
+        max-height: 70%;
+      }
+    </style>
+    <title>Page Title</title>
+  </head>
+  <body>
+    <div class="container" id="bsr-wrapper">
+      <div class="row">
+        <div class="col"><img src="NDHeadshot.jpeg"></div>
+        <div class="col-md-9">
+          <p>Ryan Spezzacatena ('24) is a senior majoring in finance. He is a huge fan of the Youtuber creator Beard Meets Food, finding his ridiculous food challenges hilarious!</p>
+        </div>
       </div>
-      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script><script src="js/main.js"></script>
-   </body>
+      <div class="row">
+        <div class="col"><img src="IMG_9811.jpeg"></div>
+        <div class="col-md-9">
+          <p>Madeline Koo ('24) is a senior double majoring in Psychology and Africana Studies with a minor in Education Schooling & Society. Growing up, she was a huge fan of Matty B and the Cimorelli family’s Youtube platforms because of all of their catchy music videos.</p>
+        </div>
+      </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
          <div class='py-3 my-4'></div>
-         <h2>Behind Our Code</h2>
+         <h1>Behind Our Code</h1>
          <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/3nrLc_JOF7k" allow="web-share" dir="" allowfullscreen></iframe></div>
       </div>
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script><script src="js/main.js"></script>
