--- a/Conclusion.html
+++ b/Conclusion.html
@@ -9,7 +9,7 @@
    </head>
    <body>
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png?20220706172052/30/30" width = 130 height = 100 class="mr-2"></span></button>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png?20220706172052/30/30" width = 30 height = 20 class="mr-2"></span></button>
         <div class="collapse navbar-collapse" id="navbar-body">
            <ul class="navbar-nav mr-auto"></ul>
            <ul class="navbar-nav ml-auto">
@@ -21,13 +21,13 @@
         </div>
      </nav>
       <div style="text-align: center;" class="container" id="bsr-wrapper">
-         <h1>Heading 1</h1>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
-         <div class='py-3 my-4'></div>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
-         <div class='my-5'></div>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
-      </div>
+         <h1>Conclusion</h1>
+         <p>In summary, our website serves as a valuable repository of data-driven visualizations aimed at illuminating key trends within the global Youtube usership and platform, tailored to both existing and aspiring Youtubers. Tailored for both established and aspiring YouTubers, we aimed to provide insights that aid in understanding the demographics, strategies, and dedication of the top 1,000 global Youtubers, with a significant focus on creators from America and India. While our analysis does not comprehensively cover the expansive realm of YouTube and its diverse content creators and followers, it has potential for further exploration into the strategies, trends, marketing techniques, and media engagement employed by top YouTube creators to establish and sustain their global presence and subscriber base.</p>
+         <div class='my-1'></div>
+         <p>Our primary data source was a csv file provided by Kaggle from the year 2023. It categorized the top 1,000 global Youtubers and their respective subscriber count, video views, upload frequency, creation year, country of origin, earnings, category of channel, channel rank, and other comprehensive data. We meticulously filtered and extracted this Kaggle dataset due to the many niche categories that we experimented with and quickly proved as irrelevant to answering our main questions. Thus, we focused specifically on the data columns of the top 1,000 global Youtubers, their country of residence, creation year and date, subscriber count, video views count, video upload count, and category genre of their channel.
+         </p>
+         <div class='my-1'></div>
+         <p>CSV file: <a href="https://www.kaggle.com/datasets/nelgiriyewithana/global-youtube-statistics-2023" target="_blank">https://www.kaggle.com/datasets/nelgiriyewithana/global-youtube-statistics-2023</a></p>
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script><script src="js/main.js"></script>
    </body>
 </html>
