--- a/Content.html
+++ b/Content.html
@@ -21,40 +21,40 @@
         </div>
      </nav>
       <div style="text-align: center;" class="container" id="bsr-wrapper">
-         <h1>Heading 1</h1>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
+         <h1>Content</h1>
+         <p>short blurb on the different content visualizations we wanted to make to answer certain questions.</p>
          <div class='py-3 my-4'></div>
-         <h3>Heading 3</h3>
+         <h3>Visualization 1</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
             <object type="text/html" data="figure4.html"
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
+         <p>This (type of visualization)..</p>
          <div class='py-3 my-4'></div>
-         <h3>Heading 3</h3>
+         <h3>Visualization 2</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
             <object type="text/html" data="figure5.html"
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
+         <p>This (type of visualization)..</p>
          <div class='py-3 my-4'></div>
-         <h3>Heading 3</h3>
+         <h3>Visualization 3</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
             <object type="text/html" data="figure6.html"
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
+         <p>This (type of visualization)..</p>
          <div class='py-3 my-4'></div>
-         <h3>Heading 3</h3>
+         <h3>Visualization 4</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
             <object type="text/html" data="figure7.html"
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
+         <p>This (type of visualization)...</p>
       </div>
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script><script src="js/main.js"></script>
    </body>
