--- a/Geography.html
+++ b/Geography.html
@@ -9,7 +9,7 @@
    </head>
    <body>
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png?20220706172052/30/30" width = 130 height = 100 class="mr-2"></span></button>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png?20220706172052/30/30" width = 30 height = 20 class="mr-2"></span></button>
         <div class="collapse navbar-collapse" id="navbar-body">
            <ul class="navbar-nav mr-auto"></ul>
            <ul class="navbar-nav ml-auto">
@@ -21,32 +21,32 @@
         </div>
     </nav>
       <div style="text-align: center;" class="container" id="bsr-wrapper">
-         <h1>Heading 1</h1>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
+         <h1>Geography</h1>
+         <p>quick note on our focus of geography.</p>
          <div class='py-3 my-4'></div>
-         <h3>Heading 3</h3>
+         <h3>Visualization 1</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
             <object type="text/html" data="figure1.html"
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
+         <p>This (type of visualization)..</p>
          <div class='py-3 my-4'></div>
-         <h3>Heading 3</h3>
+         <h3>Visualization 2</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
             <object type="text/html" data="figure2.html"
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
+         <p>This (type of visualization)..</p>
          <div class='py-3 my-4'></div>
-         <h3>Heading 3</h3>
+         <h3>Visualization 3</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
             <object type="text/html" data="figure3.html"
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt eligendi commodi sapiente.</p>
+         <p>This (type of visualization)...</p>
       </div>
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script><script src="js/main.js"></script>
    </body>
