--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
       <div class="row">
         <div class="col"><img src="NDHeadshot.jpeg"></div>
         <div class="col-md-9">
-          <p>Ryan Spezzacatena ('24) is a senior majoring in finance. He is a huge fan of the Youtuber creator Beard Meets Food, finding his ridiculous food challenges hilarious!</p>
+          <p>Ryan Spezzacatena ('24) is a senior majoring in finance. He is a huge fan of the YouTuber creator Beard Meets Food, finding his ridiculous food challenges hilarious!</p>
         </div>
       </div>
       <div class="row">
         <div class="col"><img src="IMG_9811.jpeg"></div>
         <div class="col-md-9">
-          <p>Madeline Koo ('24) is a senior double majoring in Psychology and Africana Studies with a minor in Education Schooling & Society. Growing up, she was a huge fan of Matty B and the Cimorelli family’s Youtube platforms because of all of their catchy music videos.</p>
+          <p>Madeline Koo ('24) is a senior double majoring in Psychology and Africana Studies with a minor in Education Schooling & Society. Growing up, she was a huge fan of Matty B and the Cimorelli family’s YouTube platforms because of all of their catchy music videos.</p>
         </div>
       </div>
     </div>
