--- a/Content.html
+++ b/Content.html
@@ -22,7 +22,7 @@
      </nav>
       <div style="text-align: center;" class="container" id="bsr-wrapper">
          <h1>Content</h1>
-         <p>short blurb on the different content visualizations we wanted to make to answer certain questions.</p>
+         <p>Our data set encompassed details about the top 1,000 global YouTubers names, rank, subscriber count, video views county, video category, title of their channel, upload county, country of residence, video views in the last thirty days, their channel’s rank, different salary earnings, and year of their platform’s creation. We had an abundance of data at our disposal, allowing us to craft the ensuing visualizations aimed at addressing our initial inquiries: Is there a correlation between the creator’s country of residence to their video views and subscribers? What about the relationship between video views and subscribers to the specific video categories and video uploads for each creator? Are there any interrelated correlations between subscriber count, video views, and subscribers? Our visualizations led us to unexpected depths, uncovering insights beyond our initial expectations.</p>
          <div class='py-3 my-4'></div>
          <h3>Visualization 1</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
@@ -30,7 +30,7 @@
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>This (type of visualization)..</p>
+         <p>This bar plot depicts the distribution of channel types among the top 1,000 global YouTubers, spanning categories such as Music, Education, News, and Animals. Firstly, the Entertainment channel type stands out prominently, surpassing all other channel types with a substantial count of over 300 channels. Music trails behind with just over 200 channels, with People and Game channel types exhibiting notably lower figures, each hovering around 100 channels. Second, the categories with the lowest number of channels include the channel types of Nonprofit, Autos, and Animals. Given YouTube’s design for quick and accessible entertainment, it aligns that music and entertainment channel types lead in channel count compared to those category types with fewer channels. Lastly, the inference can be drawn that the appeal of the top 1,000 global YouTubers lies in our culture’s strong affinity for music and entertainment. Consequently, Music and entertainment channels appear to be the most popular in gaining subscribers, necessitating diverse channels, creators, video views, and consistent uploads. Considering other visualizations on our Content page, we can deduce the various factors that propelled these YouTube creators to attain top 1,000 status.</p>
          <div class='py-3 my-4'></div>
          <h3>Visualization 2</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
@@ -38,7 +38,7 @@
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>This (type of visualization)..</p>
+         <p>This bar chart visualization provides a direct comparison of the distribution of YouTube channels across various categories in India and the United States. Firstly, it is clear that the United States has a greater number of channels in the majority of video categories on YouTube being Entertainment, Music, People & Blogs, Comedy, Education, Gaming, Film & Animation, Howto & Style, Science & Technology, Sports, Pets & Animals, and Nonprofits & Activism video categories. The largest portion of top YouTube channels make content in the Entertainment and Music categories, suggesting their popularity among the public. Lastly, it’s made clear that viewers consume a large array of content on YouTube, as there are 16 different categories represented among the top 1000 YouTube channels. </p>
          <div class='py-3 my-4'></div>
          <h3>Visualization 3</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
@@ -46,7 +46,7 @@
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>This (type of visualization)..</p>
+         <p>This scatter plot compares video uploads to total video views for Youtubers from India and the United States. Firstly, the size of the colored markers corresponds to the respective subscriber counts, allowing for quick identification of YouTubers with varying audience sizes. It is clear that T-Series, Cocomelon, and SET India have reached far higher numbers of video views, while simultaneously having uploads on the medium to low end. There is a visible correlation between an increase in total video views as the number of total uploads increases. Secondly, it is clear that India and the United States out-color and outnumber the other 47 countries in terms of their residing YouTube creator’s video views, uploads, and subscriber count. Lastly, it’s interesting to see that there is not a direct perfect correlation between the number of uploads and the number of total views. There are a large handful of channels that have posted an extremely high number of videos, yet they do not have that many total video views. So, just because a channel posts a lot of videos doesn’t guarantee high video views.</p>
          <div class='py-3 my-4'></div>
          <h3>Visualization 4</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
@@ -54,7 +54,7 @@
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>This (type of visualization)...</p>
+         <p>This correlation matrix heatmap illustrates the relationships between subscriber count, video views, and the number of uploads among YouTubers from India and the United States. Firstly, the heatmap visually represents the correlation coefficients among subscriber count, video views, and the number of uploads which shows the interrelatedness of all three factors that influence a YouTuber’s consequential level of engagement and popularity on the platform. Within this matrix, subscribers to uploads has the weakest relationship with a correlation of 0.12. Secondly, the color intensity in the heatmap highlights the strength of these correlations, with lighter shades indicating stronger relationships. The correlation between video views and subscribers is 0.81, which suggests that there is a strong positive correlation between the two. Lastly, the focus on Indian and U.S. YouTuber’s provides specific insights into the dynamics of these correlations as these two groups account for the large majority of the top YouTubers and thus follow the most reliable correlation patterns. </p>
       </div>
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script><script src="js/main.js"></script>
    </body>
