--- a/Geography.html
+++ b/Geography.html
@@ -22,7 +22,7 @@
     </nav>
       <div style="text-align: center;" class="container" id="bsr-wrapper">
          <h1>Geography</h1>
-         <p>quick note on our focus of geography.</p>
+         <p>Our data set provided plentiful information on the top 1,000 global YouTuber’s country of residence, longitude and latitude of their country of residence, country rank, country population, and their urban population. Given that some of these data columns quickly proved irrelevant to our initial questions, we created the following visualizations with our guiding questions: Where is the highest concentration of successful Youtubers when looking at a global map? What level of global and regional impact do influential YouTube creators have on the world and the region that they reside in? Are there geographical trends in terms of channel categories, video viewers, subscribers, and amount of Youtubers in specific geographical regions? Our visualizations led us to deeper insights and extended our understanding beyond what we had initially anticipated.</p>
          <div class='py-3 my-4'></div>
          <h3>Visualization 1</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
@@ -30,7 +30,7 @@
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>This (type of visualization)..</p>
+         <p>This geographical scatter plot visualization illustrates the geographical distribution of the top 1,000 YouTubers across the globe. Firstly, the size of the bubbles in the scatter plot corresponds to the number of Youtubers in each country, allowing for quick identification of the largest concentrations of content creators. The regions with larger and more densely populated bubbles suggest a higher prevalence of YouTubers in those areas. The bubble size hovering over America illustrates the 313 creators originating from America, being the largest concentration of content creators, followed by India with 168 creators. Secondly, and opposingly, the countries with one YouTube creator in the top 1,000 global Youtubers list residing in their country include China, Afghanistan, Malaysia, Morocco, Peru and Switzerland. Thirdly, it is clear that Africa, as a continent, lacks any famous Youtubers and respective channels in any of their 54 countries. Given the geographical distribution of these top 1,000 YouTube creators, it is clear that YouTube content creators can become extremely successful being from any part of the world, but there are select locations with higher concentrations of top YouTubers.</p>
          <div class='py-3 my-4'></div>
          <h3>Visualization 2</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
@@ -38,7 +38,7 @@
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>This (type of visualization)..</p>
+         <p>This scatter plot visualization illustrates the number of the top 1,000 global channels created each year since 1970, by country. Firstly, it is clear that the largest number of the top 1000 channels from the United States that were created in a year, ranging from 1970 to 2022, was 2006, as there were 40 channels created. Secondly, it is clear that the top 1,000 global YouTubers reside across 49 different countries, which is interesting to put into perspective when thinking about the 195 countries in the world. This insight suggests the assumption that the profession of YouTube is more common and popular in these 49 different countries, and that YouTube is more likely to be a popular platform in these countries. Thirdly, the United States across the board has the largest number of channels being created throughout the years, with India trailing not too far behind, on average producing at least five channels a year. The years of 2008 to 2018 have the highest concentration of number of channels created in a given year. </p>
          <div class='py-3 my-4'></div>
          <h3>Visualization 3</h3>
          <div style="margin: 0 auto; width:100%; height:400px;">
@@ -46,7 +46,7 @@
                     style="width:110%; height:100%; margin:1%;">
             </object>
         </div>
-         <p>This (type of visualization)...</p>
+         <p>This scatter plot compares Indian and U.S. YouTubers based on their subscriber counts and video views. This visualization provides a direct assessment of the differences and similarities in the YouTube landscape between these two countries, providing insights into the scale and dynamics of content creation and viewership. By examining the data points with larger marker sizes (indicating higher subscriber counts) and positions in the top-right quadrant of the plot (high subscribers and high video views), we can identify creators with a substantial impact on YouTube and viewers. These creators have not only garnered a large following but also achieved significant viewership, making them influential figures in the YouTube space. More specifically, T-Series from India significantly outnumbers the rest of these creators from the United States and India with 228 billion video views and 24,500,000 subscribers. Cocomelon - Nursery Rhymes, originating in the United States, places second in terms of both video views and subscriber count, boasting an impressive 164 billion video views and a subscriber base of 162,000,000. It can be inferred that Cocomelon gains so much traction because of its high entertainment value and engaging content for children. Further, a positive linear relationship between a YouTuber’s video view count and subscriber count can be seen in the plot, among both country YouTube creators. </p>
       </div>
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script><script src="js/main.js"></script>
    </body>
